[gd_scene load_steps=12 format=3 uid="uid://cs6soga028c1v"]

[ext_resource type="Script" path="res://Scripts/Mini juegos/Tic-tac-toe/tic_tac_toe.gd" id="1_5sqh7"]
[ext_resource type="Texture2D" uid="uid://db7yng8y26ke8" path="res://Scenes2D/Tic_Tac_Toe/Sprite/Rombo_Circulo.png" id="2_2c1y0"]

[sub_resource type="Gradient" id="Gradient_0cvr4"]
offsets = PackedFloat32Array(0.928161, 0.962644)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0.298039)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wbhpp"]
gradient = SubResource("Gradient_0cvr4")
width = 24
height = 24
fill = 2
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_kondk"]
offsets = PackedFloat32Array(0.816092, 0.962644)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0.298039)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rgafv"]
gradient = SubResource("Gradient_kondk")
width = 16
height = 16
fill = 2
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_11lt4"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.890805)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_um7r7"]
gradient = SubResource("Gradient_11lt4")
width = 16
height = 16
fill = 2
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_7j1gn"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.0267857, 0.782738, 0.9375)
colors = PackedColorArray(0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_h3xos"]
gradient = SubResource("Gradient_7j1gn")
width = 8
height = 8

[sub_resource type="GradientTexture2D" id="GradientTexture2D_sd7p3"]
gradient = SubResource("Gradient_7j1gn")
width = 8
height = 8

[node name="Tic-tac-toe" type="Node2D"]
script = ExtResource("1_5sqh7")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 820.0
offset_bottom = 820.0
color = Color(0.2125, 0.25, 0.225, 1)

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 1)
texture_filter = 3
offset_right = 820.0
offset_bottom = 820.0
pivot_offset = Vector2(125, 125)
texture = SubResource("GradientTexture2D_wbhpp")

[node name="Cuadrillas" type="Node2D" parent="."]
position = Vector2(40, 48)
scale = Vector2(0.9, 0.9)

[node name="Casilla_1" type="Marker2D" parent="Cuadrillas"]
position = Vector2(154, 154)

[node name="TextureRect" type="TextureRect" parent="Cuadrillas/Casilla_1"]
modulate = Color(0, 0, 0, 1)
texture_filter = 3
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
pivot_offset = Vector2(125, 125)
texture = SubResource("GradientTexture2D_rgafv")

[node name="TextureRect2" type="TextureRect" parent="Cuadrillas/Casilla_1"]
modulate = Color(0, 0, 0, 1)
texture_filter = 3
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
pivot_offset = Vector2(125, 125)
texture = SubResource("GradientTexture2D_um7r7")

[node name="Rombo" type="Node2D" parent="Cuadrillas/Casilla_1"]
visible = false
modulate = Color(0.694658, 0.305996, 0.248541, 1)

[node name="Rombo" type="Sprite2D" parent="Cuadrillas/Casilla_1/Rombo"]
texture_filter = 3
scale = Vector2(11.8611, 11.8611)
texture = ExtResource("2_2c1y0")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Circulo" type="Node2D" parent="Cuadrillas/Casilla_1"]
visible = false
modulate = Color(1.63645e-06, 0.472456, 0.748351, 1)

[node name="Circulo" type="Sprite2D" parent="Cuadrillas/Casilla_1/Circulo"]
texture_filter = 3
scale = Vector2(14.0833, 14.0833)
texture = ExtResource("2_2c1y0")
region_enabled = true
region_rect = Rect2(16, 0, 16, 16)

[node name="Casilla_2" type="Marker2D" parent="Cuadrillas"]
position = Vector2(410, 154)

[node name="TextureRect" type="TextureRect" parent="Cuadrillas/Casilla_2"]
texture_filter = 3
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
pivot_offset = Vector2(125, 125)
texture = SubResource("GradientTexture2D_rgafv")

[node name="TextureRect2" type="TextureRect" parent="Cuadrillas/Casilla_2"]
modulate = Color(0, 0, 0, 1)
texture_filter = 3
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
pivot_offset = Vector2(125, 125)
texture = SubResource("GradientTexture2D_um7r7")

[node name="Rombo" type="Node2D" parent="Cuadrillas/Casilla_2"]
visible = false
modulate = Color(0.694658, 0.305996, 0.248541, 1)

[node name="Rombo" type="Sprite2D" parent="Cuadrillas/Casilla_2/Rombo"]
texture_filter = 3
scale = Vector2(11.8611, 11.8611)
texture = ExtResource("2_2c1y0")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Circulo" type="Node2D" parent="Cuadrillas/Casilla_2"]
visible = false
modulate = Color(1.63645e-06, 0.472456, 0.748351, 1)

[node name="Circulo" type="Sprite2D" parent="Cuadrillas/Casilla_2/Circulo"]
texture_filter = 3
scale = Vector2(14.0833, 14.0833)
texture = ExtResource("2_2c1y0")
region_enabled = true
region_rect = Rect2(16, 0, 16, 16)

[node name="Casilla_3" type="Marker2D" parent="Cuadrillas"]
position = Vector2(666, 154)

[node name="TextureRect" type="TextureRect" parent="Cuadrillas/Casilla_3"]
texture_filter = 3
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
pivot_offset = Vector2(125, 125)
texture = SubResource("GradientTexture2D_rgafv")

[node name="TextureRect2" type="TextureRect" parent="Cuadrillas/Casilla_3"]
modulate = Color(0, 0, 0, 1)
texture_filter = 3
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
pivot_offset = Vector2(125, 125)
texture = SubResource("GradientTexture2D_um7r7")

[node name="Rombo" type="Node2D" parent="Cuadrillas/Casilla_3"]
visible = false
modulate = Color(0.694658, 0.305996, 0.248541, 1)

[node name="Rombo" type="Sprite2D" parent="Cuadrillas/Casilla_3/Rombo"]
texture_filter = 3
scale = Vector2(11.8611, 11.8611)
texture = ExtResource("2_2c1y0")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Circulo" type="Node2D" parent="Cuadrillas/Casilla_3"]
visible = false
modulate = Color(1.63645e-06, 0.472456, 0.748351, 1)

[node name="Circulo" type="Sprite2D" parent="Cuadrillas/Casilla_3/Circulo"]
texture_filter = 3
scale = Vector2(14.0833, 14.0833)
texture = ExtResource("2_2c1y0")
region_enabled = true
region_rect = Rect2(16, 0, 16, 16)

[node name="Casilla_4" type="Marker2D" parent="Cuadrillas"]
position = Vector2(154, 410)

[node name="TextureRect" type="TextureRect" parent="Cuadrillas/Casilla_4"]
texture_filter = 3
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
pivot_offset = Vector2(125, 125)
texture = SubResource("GradientTexture2D_rgafv")

[node name="TextureRect2" type="TextureRect" parent="Cuadrillas/Casilla_4"]
modulate = Color(0, 0, 0, 1)
texture_filter = 3
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
pivot_offset = Vector2(125, 125)
texture = SubResource("GradientTexture2D_um7r7")

[node name="Rombo" type="Node2D" parent="Cuadrillas/Casilla_4"]
visible = false
modulate = Color(0.694658, 0.305996, 0.248541, 1)

[node name="Rombo" type="Sprite2D" parent="Cuadrillas/Casilla_4/Rombo"]
texture_filter = 3
scale = Vector2(11.8611, 11.8611)
texture = ExtResource("2_2c1y0")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Circulo" type="Node2D" parent="Cuadrillas/Casilla_4"]
visible = false
modulate = Color(1.63645e-06, 0.472456, 0.748351, 1)

[node name="Circulo" type="Sprite2D" parent="Cuadrillas/Casilla_4/Circulo"]
texture_filter = 3
scale = Vector2(14.0833, 14.0833)
texture = ExtResource("2_2c1y0")
region_enabled = true
region_rect = Rect2(16, 0, 16, 16)

[node name="Casilla_5" type="Marker2D" parent="Cuadrillas"]
position = Vector2(410, 410)

[node name="TextureRect" type="TextureRect" parent="Cuadrillas/Casilla_5"]
texture_filter = 3
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
pivot_offset = Vector2(125, 125)
texture = SubResource("GradientTexture2D_rgafv")

[node name="TextureRect2" type="TextureRect" parent="Cuadrillas/Casilla_5"]
modulate = Color(0, 0, 0, 1)
texture_filter = 3
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
pivot_offset = Vector2(125, 125)
texture = SubResource("GradientTexture2D_um7r7")

[node name="Rombo" type="Node2D" parent="Cuadrillas/Casilla_5"]
visible = false
modulate = Color(0.694658, 0.305996, 0.248541, 1)

[node name="Rombo" type="Sprite2D" parent="Cuadrillas/Casilla_5/Rombo"]
texture_filter = 3
scale = Vector2(11.8611, 11.8611)
texture = ExtResource("2_2c1y0")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Circulo" type="Node2D" parent="Cuadrillas/Casilla_5"]
visible = false
modulate = Color(1.63645e-06, 0.472456, 0.748351, 1)

[node name="Circulo" type="Sprite2D" parent="Cuadrillas/Casilla_5/Circulo"]
texture_filter = 3
scale = Vector2(14.0833, 14.0833)
texture = ExtResource("2_2c1y0")
region_enabled = true
region_rect = Rect2(16, 0, 16, 16)

[node name="Casilla_6" type="Marker2D" parent="Cuadrillas"]
position = Vector2(666, 410)

[node name="TextureRect" type="TextureRect" parent="Cuadrillas/Casilla_6"]
texture_filter = 3
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
pivot_offset = Vector2(125, 125)
texture = SubResource("GradientTexture2D_rgafv")

[node name="TextureRect2" type="TextureRect" parent="Cuadrillas/Casilla_6"]
modulate = Color(0, 0, 0, 1)
texture_filter = 3
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
pivot_offset = Vector2(125, 125)
texture = SubResource("GradientTexture2D_um7r7")

[node name="Rombo" type="Node2D" parent="Cuadrillas/Casilla_6"]
visible = false
modulate = Color(0.694658, 0.305996, 0.248541, 1)

[node name="Rombo" type="Sprite2D" parent="Cuadrillas/Casilla_6/Rombo"]
texture_filter = 3
scale = Vector2(11.8611, 11.8611)
texture = ExtResource("2_2c1y0")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Circulo" type="Node2D" parent="Cuadrillas/Casilla_6"]
visible = false
modulate = Color(1.63645e-06, 0.472456, 0.748351, 1)

[node name="Circulo" type="Sprite2D" parent="Cuadrillas/Casilla_6/Circulo"]
texture_filter = 3
scale = Vector2(14.0833, 14.0833)
texture = ExtResource("2_2c1y0")
region_enabled = true
region_rect = Rect2(16, 0, 16, 16)

[node name="Casilla_7" type="Marker2D" parent="Cuadrillas"]
position = Vector2(154, 666)

[node name="TextureRect" type="TextureRect" parent="Cuadrillas/Casilla_7"]
texture_filter = 3
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
pivot_offset = Vector2(125, 125)
texture = SubResource("GradientTexture2D_rgafv")

[node name="TextureRect2" type="TextureRect" parent="Cuadrillas/Casilla_7"]
modulate = Color(0, 0, 0, 1)
texture_filter = 3
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
pivot_offset = Vector2(125, 125)
texture = SubResource("GradientTexture2D_um7r7")

[node name="Rombo" type="Node2D" parent="Cuadrillas/Casilla_7"]
visible = false
modulate = Color(0.694658, 0.305996, 0.248541, 1)

[node name="Rombo" type="Sprite2D" parent="Cuadrillas/Casilla_7/Rombo"]
texture_filter = 3
scale = Vector2(11.8611, 11.8611)
texture = ExtResource("2_2c1y0")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Circulo" type="Node2D" parent="Cuadrillas/Casilla_7"]
visible = false
modulate = Color(1.63645e-06, 0.472456, 0.748351, 1)

[node name="Circulo" type="Sprite2D" parent="Cuadrillas/Casilla_7/Circulo"]
texture_filter = 3
scale = Vector2(14.0833, 14.0833)
texture = ExtResource("2_2c1y0")
region_enabled = true
region_rect = Rect2(16, 0, 16, 16)

[node name="Casilla_8" type="Marker2D" parent="Cuadrillas"]
position = Vector2(410, 666)

[node name="TextureRect" type="TextureRect" parent="Cuadrillas/Casilla_8"]
texture_filter = 3
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
pivot_offset = Vector2(125, 125)
texture = SubResource("GradientTexture2D_rgafv")

[node name="TextureRect2" type="TextureRect" parent="Cuadrillas/Casilla_8"]
modulate = Color(0, 0, 0, 1)
texture_filter = 3
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
pivot_offset = Vector2(125, 125)
texture = SubResource("GradientTexture2D_um7r7")

[node name="Rombo" type="Node2D" parent="Cuadrillas/Casilla_8"]
visible = false
modulate = Color(0.694658, 0.305996, 0.248541, 1)

[node name="Rombo" type="Sprite2D" parent="Cuadrillas/Casilla_8/Rombo"]
texture_filter = 3
scale = Vector2(11.8611, 11.8611)
texture = ExtResource("2_2c1y0")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Circulo" type="Node2D" parent="Cuadrillas/Casilla_8"]
visible = false
modulate = Color(1.63645e-06, 0.472456, 0.748351, 1)

[node name="Circulo" type="Sprite2D" parent="Cuadrillas/Casilla_8/Circulo"]
texture_filter = 3
scale = Vector2(14.0833, 14.0833)
texture = ExtResource("2_2c1y0")
region_enabled = true
region_rect = Rect2(16, 0, 16, 16)

[node name="Casilla_9" type="Marker2D" parent="Cuadrillas"]
position = Vector2(666, 666)

[node name="TextureRect" type="TextureRect" parent="Cuadrillas/Casilla_9"]
texture_filter = 3
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
pivot_offset = Vector2(125, 125)
texture = SubResource("GradientTexture2D_rgafv")

[node name="TextureRect2" type="TextureRect" parent="Cuadrillas/Casilla_9"]
modulate = Color(0, 0, 0, 1)
texture_filter = 3
offset_left = -125.0
offset_top = -125.0
offset_right = 125.0
offset_bottom = 125.0
pivot_offset = Vector2(125, 125)
texture = SubResource("GradientTexture2D_um7r7")

[node name="Rombo" type="Node2D" parent="Cuadrillas/Casilla_9"]
visible = false
modulate = Color(0.694658, 0.305996, 0.248541, 1)

[node name="Rombo" type="Sprite2D" parent="Cuadrillas/Casilla_9/Rombo"]
texture_filter = 3
scale = Vector2(11.8611, 11.8611)
texture = ExtResource("2_2c1y0")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Circulo" type="Node2D" parent="Cuadrillas/Casilla_9"]
visible = false
modulate = Color(1.63645e-06, 0.472456, 0.748351, 1)

[node name="Circulo" type="Sprite2D" parent="Cuadrillas/Casilla_9/Circulo"]
texture_filter = 3
scale = Vector2(14.0833, 14.0833)
texture = ExtResource("2_2c1y0")
region_enabled = true
region_rect = Rect2(16, 0, 16, 16)

[node name="Lineas" type="Node2D" parent="."]

[node name="Vertical_UP" type="Line2D" parent="Lineas"]
visible = false
texture_filter = 3
points = PackedVector2Array(176, 184, 640, 184)
width = 59.165
default_color = Color(0.623083, 0.667972, 0.639218, 1)
texture = SubResource("GradientTexture2D_h3xos")
texture_mode = 2
begin_cap_mode = 1
end_cap_mode = 1
sharp_limit = 2.26

[node name="Vertical_MED" type="Line2D" parent="Lineas"]
visible = false
texture_filter = 3
position = Vector2(0, 232)
points = PackedVector2Array(176, 184, 640, 184)
width = 59.165
default_color = Color(0.623083, 0.667972, 0.639218, 1)
texture = SubResource("GradientTexture2D_sd7p3")
texture_mode = 2
begin_cap_mode = 1
end_cap_mode = 1
sharp_limit = 2.26

[node name="Vertical_DOWN" type="Line2D" parent="Lineas"]
visible = false
texture_filter = 3
position = Vector2(0, 464)
points = PackedVector2Array(176, 184, 640, 184)
width = 59.165
default_color = Color(0.623083, 0.667972, 0.639218, 1)
texture = SubResource("GradientTexture2D_sd7p3")
texture_mode = 2
begin_cap_mode = 1
end_cap_mode = 1
sharp_limit = 2.26

[node name="Horizontal_LEFT" type="Line2D" parent="Lineas"]
visible = false
texture_filter = 3
position = Vector2(0, 232)
rotation = 0.785398
points = PackedVector2Array(90.5097, -158.392, 418.607, 169.706)
width = 59.165
default_color = Color(0.623083, 0.667972, 0.639218, 1)
texture = SubResource("GradientTexture2D_sd7p3")
texture_mode = 2
begin_cap_mode = 1
end_cap_mode = 1
sharp_limit = 2.26

[node name="Horizontal_MED" type="Line2D" parent="Lineas"]
visible = false
texture_filter = 3
position = Vector2(232, 232)
rotation = 0.785398
points = PackedVector2Array(90.5097, -158.392, 418.607, 169.706)
width = 59.165
default_color = Color(0.623083, 0.667972, 0.639218, 1)
texture = SubResource("GradientTexture2D_sd7p3")
texture_mode = 2
begin_cap_mode = 1
end_cap_mode = 1
sharp_limit = 2.26

[node name="Horizontal_RIGHT" type="Line2D" parent="Lineas"]
visible = false
texture_filter = 3
position = Vector2(464, 232)
rotation = 0.785398
points = PackedVector2Array(90.5097, -158.392, 418.607, 169.706)
width = 59.165
default_color = Color(0.623083, 0.667972, 0.639218, 1)
texture = SubResource("GradientTexture2D_sd7p3")
texture_mode = 2
begin_cap_mode = 1
end_cap_mode = 1
sharp_limit = 2.26

[node name="Diagonal_LEFT" type="Line2D" parent="Lineas"]
visible = false
texture_filter = 3
position = Vector2(464, 232)
rotation = 0.785398
points = PackedVector2Array(-237.588, 169.706, 418.607, 169.706)
width = 59.165
default_color = Color(0.623083, 0.667972, 0.639218, 1)
texture = SubResource("GradientTexture2D_sd7p3")
texture_mode = 2
begin_cap_mode = 1
end_cap_mode = 1
sharp_limit = 2.26

[node name="Diagonal_RIGHT" type="Line2D" parent="Lineas"]
visible = false
texture_filter = 3
position = Vector2(464, 232)
rotation = 0.785398
points = PackedVector2Array(90.5097, -158.392, 90.5096, 497.803)
width = 59.165
default_color = Color(0.623083, 0.667972, 0.639218, 1)
texture = SubResource("GradientTexture2D_sd7p3")
texture_mode = 2
begin_cap_mode = 1
end_cap_mode = 1
sharp_limit = 2.26

[node name="IA_Game" type="Timer" parent="."]
process_callback = 0
one_shot = true

[connection signal="timeout" from="IA_Game" to="." method="_on_ia_game_timeout"]
